// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/RaceTimes renders everytime 1`] = `
<td>
  <div>
    Every 3 hours starting at 1:30 AM UTC
  </div>
</td>
`;

exports[`components/columns/RaceTimes renders everytime no offset 1`] = `
<td>
  <div>
    Every 3 hours starting at 12:00 AM UTC
  </div>
</td>
`;

exports[`components/columns/RaceTimes renders no time data 1`] = `
<td>
  No time data
</td>
`;

exports[`components/columns/RaceTimes renders settimes 1`] = `
<td
  class="clickableCell"
>
  <button
    class="cellButton"
    style="min-height: 0;"
    type="button"
  >
    Set times
  </button>
</td>
`;

exports[`components/columns/RaceTimes renders settimes 2`] = `
<body>
  <div>
    <table>
      <tbody>
        <tr
          data-testid="table-row"
        >
          <td
            class="clickableCell"
          >
            <button
              class="cellButton"
              style="min-height: 0;"
              type="button"
            >
              Set times
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    id="undefined"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; display: block; inset: 0; background-color: rgba(255, 255, 255, 0.75);"
    >
      <div
        class="Modal__Bootstrap modal-dialog modal-lg"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                class="glyphicon glyphicon-remove"
              />
            </button>
            <h4
              class="modal-title"
            >
              Set times for Mazda Cup
            </h4>
          </div>
          <div
            class="modal-body"
            style="max-height: 55vh; overflow-y: auto;"
          >
            <div
              class="container-fluid"
            >
              <ul>
                <li>
                  Friday, 2:00 AM GMT (Friday, 2:00 AM UTC)
                </li>
                <li>
                  Saturday, 1:00 PM GMT (Saturday, 1:00 PM UTC)
                </li>
              </ul>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/columns/RaceTimes renders settimes 3`] = `
<body>
  <div>
    <table>
      <tbody>
        <tr
          data-testid="table-row"
        >
          <td
            class="clickableCell"
          >
            <button
              class="cellButton"
              style="min-height: 0;"
              type="button"
            >
              Set times
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    id="undefined"
  />
</body>
`;
